<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:padding="14dp"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/instructions" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/player_1_name" />

        <EditText
            android:id="@+id/playerOneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_1_hint"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/darkWhite"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/player_2_name" />

        <EditText
            android:id="@+id/playerTwoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_2_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/darkWhite"
            android:textSize="18sp"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@color/actionButtions"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/play" />
</GridLayout>